job count endpoint (#5)
* respository get search count

* include search count method

* implment handler search count

* mock search count

* search count endpoint

* update docs

* fix linter
